# gkr-integration

./: .gitattributes  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg-configuration.json
basic_deps/: CMakeLists.txt
basic_deps/Catch2/: CMakeLists.txt  README.md  bootstrap.cmd  bootstrap.sh  main.cpp
basic_deps/libdatachannel/: CMakeLists.txt  README.md  bootstrap.cmd  libdatachannel_install.cmd  libdatachannel_uninstall.cmd  main.cpp
basic_deps/nlohmann_json/: CMakeLists.txt  README.md  bootstrap.cmd  bootstrap.sh  nlohmann_json_install.cmd  nlohmann_json_main.cpp  nlohmann_json_uninstall.cmd
imported_deps/: CMakeLists.txt
imported_deps/NVidia/: CMakeLists.txt  encoderMain.cpp
imported_deps/NVidia/Interface/: nvEncodeAPI_.h
vcpkg_deps/uWebSockets/: CMakeLists.txt  README.md  main.cpp
