add_library(nvEncodeAPI SHARED IMPORTED GLOBAL)
if(WIN32)
if(CMAKE_SIZEOF_VOID_P EQUAL 8)
set_target_properties(nvEncodeAPI PROPERTIES IMPORTED_IMPLIB "${CMAKE_CURRENT_SOURCE_DIR}/Lib/x64/nvencodeapi.lib")
else()
set_target_properties(nvEncodeAPI PROPERTIES IMPORTED_IMPLIB "${CMAKE_CURRENT_SOURCE_DIR}/Lib/Win32/nvencodeapi.lib")
endif()
else()
status(FATAL_ERROR "Not implemented yet")
endif()
target_include_directories(nvEncodeAPI INTERFACE "Interface")

add_executable(nvEncoderTest encoderMain.cpp)
target_link_libraries(nvEncoderTest nvEncodeAPI)
